<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".UI.MainActivity">

    <!-- Welcome Title -->
    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_to_vacation_planner"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App Description Text -->
    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/track_your_vacations_set_reminders_share_your_trips_with_friends_amp_family_and_more"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

    <!-- Stylish Button to Start Planning -->

    <!-- Sign Out Button -->
    <Button
        android:id="@+id/button"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/endGradient"
        android:elevation="8dp"
        android:paddingLeft="36dp"
        android:paddingTop="16dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="@string/start_planning"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@id/signOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introText"
        app:layout_constraintVertical_bias="0.441"
        app:strokeColor="@android:color/white"
        app:strokeWidth="3dp" />

    <!-- Button to View Report -->
    <Button
        android:id="@+id/buttonViewReport"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/endGradient"
        android:elevation="8dp"
        android:paddingLeft="36dp"
        android:paddingTop="16dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="View Report"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:strokeColor="@android:color/white"
        app:strokeWidth="3dp" />

    <!-- Button to sign out (swapped) -->
    <Button
        android:id="@+id/signOutButton"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/endGradient"
        android:elevation="8dp"
        android:paddingLeft="36dp"
        android:paddingTop="16dp"
        android:paddingRight="36dp"
        android:paddingBottom="16dp"
        android:text="Sign Out"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonViewReport"
        app:strokeColor="@android:color/white"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
